--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Hello this is my website</h1>
     <h2>this is heading two </h2>
+    <h3>this is heading three</h3>
 </body>
 </html>
